# fastapi-microservice-template

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
src/fastapi_microservice_template/: __init__.py  main.py
src/fastapi_microservice_template/api/v1/: health.py
tests/: test_health.py
