[project]
name = "fastapi-microservice-template"
version = "0.1.0"
description = "FastAPI microservice template"
authors = [{ name = "Simbarashe Timire" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "pydantic>=2.8",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ── tell Poetry to install our own code (“root package”) ──────────────
[tool.poetry]
packages = [{ include = "app" }]      # the folder that holds main.py

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.1"
pre-commit = "^4.2.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"
black = "25.1.0"

# ── Ruff config ───────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"
line-ending  = "auto"
